meja/tests/implicits-fail.stderr
File "tests/implicits-fail.meja", line 5, characters 5-9:
Error: Could not find an instance for an implicit variable of type
       showable(int).
